<resources>
    <string name="app_name">taskmaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">Do Something</string>
    <string name="my_task">My Task</string>
    <string name="task_title">Task Title</string>
    <string name="total_tasks_0">Total Tasks: 0</string>
    <string name="submitted_confirmation">Submitted!</string>
    <string name="lorem_ipsum">bh gravida cursus. Curabitur sed commodo purus. Vestibulum vestibulum non justo interdum posuere. Suspendisse gravida pellentesque est sed ornare. Integer dapibus leo id condimentum congue. Proin in hendrerit velit. Nullam tristique lectus erat, ut consectetur lacus consequat ut. Mauris eget magna vulputate, semper felis a, mollis orci. Fusce eu ultrices ipsum. Mauris tortor mauris, vehicula nec pretium eget, consectetur vel massa. Etiam malesuada, turpis eget efficitur luctus, orci justo iaculis lectus, rhoncus pharetra leo mi a dui. Nulla mollis felis aliquet nunc dignissim porttitor.</string>
    <string name="settings">Settings:</string>
    <string name="display_name">Display Name:</string>
    <string name="prompt_name">Name</string>
    <string name="submit">submit</string>
    <string name="my_tasks">My Tasks</string>
    <string name="image_button">settings</string>
    <string name="homework">homework</string>
    <string name="walk_dog">walk dog</string>
    <string name="gym">gym</string>
    <string name="blank_task_name">blank task\n</string>
    <string name="task_frag_text">no task</string>
    <string name="team_radiobutton3">Team 3</string>
    <string name="radio_button1">Team1</string>
    <string name="radio_button2">Team2</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Create Password</string>
    <string name="speak_button_text">Speak</string>
    <string name="title_activity_ad">AdActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_ad_mob">AdMobActivity</string>
</resources>